Fixed alignment of bar

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+  }
 
 h5 {
     margin: 0;
@@ -12,7 +12,7 @@ h5 {
 
 .options {
     display: flex;
-   
+    gap: 5px;
     align-items: center;
 }
 .square {
@@ -39,7 +39,13 @@ h5 {
     font-size: 40px;
 }
 
-.options-Bar {
+.optionsBar {
     display:flex;
-    justify-content: space-between;
+    width:700px;
+    justify-content: space-around;
+    
+}
+
+.options-text {
+    font-size: 20px;
 }
